@@ -19,7 +19,7 @@ public class ExperimentalGraphReferenceSolver implements ReferenceSolver {
             throw new IllegalArgumentException("Unsupported experimental graph model: " + PhysicsValues.model(specification));
         }
         ExperimentalGraphParameters p = ExperimentalGraphParameters.from(specification, overrides);
-        double x = Math.max(p.xStart(), Math.min(p.xEnd(), timeSeconds));
+        double x = Math.clamp(timeSeconds, p.xStart(), p.xEnd());
         return new AnalyticalPoint(Map.of("x", x, "y", p.intercept() + p.slope() * x,
                 "slope", p.slope(), "intercept", p.intercept()));
     }
