@@ -26,11 +26,11 @@ public class AdvancedOscillationSolver implements PhysicsSolver {
         }
         DampedForcedOscillationParameters p = DampedForcedOscillationParameters.from(
                 PhysicsValues.bag(specification, overrides));
-        if (!(durationSeconds > 0) || !(stepSeconds > 0)
+        if (durationSeconds <= 0 || stepSeconds <= 0
                 || !Double.isFinite(durationSeconds + stepSeconds)) {
             throw new IllegalArgumentException("durationSeconds and stepSeconds must be finite and positive");
         }
-        int points = Math.min(16_384, Math.max(1, (int) Math.ceil(durationSeconds / stepSeconds)));
+        int points = Math.clamp((int) Math.ceil(durationSeconds / stepSeconds), 1, 16_384);
         List<Double> time = new ArrayList<>(points + 1);
         List<Double> displacement = new ArrayList<>(points + 1);
         List<Double> velocity = new ArrayList<>(points + 1);
