@@ -19,10 +19,16 @@ public class PhotoelectricSolver implements PhysicsSolver {
                                         double durationSeconds, double stepSeconds) {
         if (!"photoelectric_effect".equals(PhysicsValues.model(specification))) throw new IllegalArgumentException("Unsupported photoelectric model: " + PhysicsValues.model(specification));
         PhotoelectricParameters p = PhotoelectricParameters.from(specification, overrides);
-        int points = Math.min(16_384, Math.max(1, (int) Math.ceil(Math.max(0.01, durationSeconds) / Math.max(0.001, stepSeconds))));
-        List<Double> time = new ArrayList<>(points + 1); Map<String, List<Double>> values = new LinkedHashMap<>();
-        List<Double> photon = new ArrayList<>(points + 1), kinetic = new ArrayList<>(points + 1), stop = new ArrayList<>(points + 1), wavelength = new ArrayList<>(points + 1), emission = new ArrayList<>(points + 1);
-        for (int i = 0; i <= points; i++) { time.add(Math.min(Math.max(0.01, durationSeconds), i * Math.max(0.001, stepSeconds))); photon.add(p.photonEnergy()); kinetic.add(p.maximumKineticEnergy()); stop.add(p.stoppingPotential()); wavelength.add(p.wavelength()); emission.add(p.emissionOccurs() ? 1.0 : 0.0); }
+        int points = Math.clamp((int) Math.ceil(Math.max(0.01, durationSeconds) / Math.max(0.001, stepSeconds)),
+                1, 16_384);
+        List<Double> time = new ArrayList<>(points + 1);
+        Map<String, List<Double>> values = new LinkedHashMap<>();
+        List<Double> photon = new ArrayList<>(points + 1);
+        List<Double> kinetic = new ArrayList<>(points + 1);
+        List<Double> stop = new ArrayList<>(points + 1);
+        List<Double> wavelength = new ArrayList<>(points + 1);
+        List<Double> emission = new ArrayList<>(points + 1);
+        for (int i = 0; i <= points; i++) { time.add(Math.clamp(i * Math.max(0.001, stepSeconds), 0, Math.max(0.01, durationSeconds))); photon.add(p.photonEnergy()); kinetic.add(p.maximumKineticEnergy()); stop.add(p.stoppingPotential()); wavelength.add(p.wavelength()); emission.add(p.emissionOccurs() ? 1.0 : 0.0); }
         values.put("photonEnergy", photon); values.put("maximumKineticEnergy", kinetic); values.put("stoppingPotential", stop); values.put("wavelength", wavelength); values.put("emissionOccurs", emission);
         return new SolverOutput(time, Map.of(), Map.of(), Map.of(), values);
     }
