@@ -18,9 +18,16 @@ public class MeasurementUncertaintySolver implements PhysicsSolver {
     @Override public SolverOutput solve(JsonNode specification, Map<String, Double> overrides, double durationSeconds, double stepSeconds) {
         if (!"measurement_uncertainty".equals(PhysicsValues.model(specification))) throw new IllegalArgumentException("Unsupported measurement model: " + PhysicsValues.model(specification));
         MeasurementUncertaintyParameters p = MeasurementUncertaintyParameters.from(specification, overrides);
-        int points = Math.min(16_384, Math.max(1, (int) Math.ceil(Math.max(.01, durationSeconds) / Math.max(.001, stepSeconds))));
-        List<Double> time = new ArrayList<>(points + 1), value = new ArrayList<>(points + 1), uncertainty = new ArrayList<>(points + 1), relative = new ArrayList<>(points + 1), defined = new ArrayList<>(points + 1), lower = new ArrayList<>(points + 1), upper = new ArrayList<>(points + 1);
-        for(int i=0;i<=points;i++){time.add(Math.min(Math.max(.01,durationSeconds),i*Math.max(.001,stepSeconds)));value.add(p.measuredValue());uncertainty.add(p.absoluteUncertainty());relative.add(p.relativeUncertainty());defined.add(p.relativeUncertaintyDefined() ? 1.0 : 0.0);lower.add(p.lowerBound());upper.add(p.upperBound());}
+        int points = Math.clamp((int) Math.ceil(Math.max(.01, durationSeconds) / Math.max(.001, stepSeconds)),
+                1, 16_384);
+        List<Double> time = new ArrayList<>(points + 1);
+        List<Double> value = new ArrayList<>(points + 1);
+        List<Double> uncertainty = new ArrayList<>(points + 1);
+        List<Double> relative = new ArrayList<>(points + 1);
+        List<Double> defined = new ArrayList<>(points + 1);
+        List<Double> lower = new ArrayList<>(points + 1);
+        List<Double> upper = new ArrayList<>(points + 1);
+        for(int i=0;i<=points;i++){time.add(Math.clamp(i*Math.max(.001,stepSeconds), 0, Math.max(.01,durationSeconds)));value.add(p.measuredValue());uncertainty.add(p.absoluteUncertainty());relative.add(p.relativeUncertainty());defined.add(p.relativeUncertaintyDefined() ? 1.0 : 0.0);lower.add(p.lowerBound());upper.add(p.upperBound());}
         Map<String,List<Double>> values = new LinkedHashMap<>(); values.put("measuredValue",value); values.put("absoluteUncertainty",uncertainty); values.put("relativeUncertainty",relative); values.put("relativeUncertaintyDefined",defined); values.put("lowerBound",lower); values.put("upperBound",upper);
         return new SolverOutput(time, Map.of(), Map.of(), Map.of(), values);
     }
